Add a concurrent structure butil/containers/sync_map inspired by sync.map in go.

--- a/test/Makefile
+++ b/test/Makefile
@@ -113,6 +113,7 @@ TEST_BUTIL_SOURCES = \
     test_switches.cc \
     scoped_locale.cc \
     popen_unittest.cpp \
+    sync_map_unittest.cc \
     butil_unittest_main.cpp
 
 ifeq ($(SYSTEM), Linux)
