mysql protocol, with transaction support, without prepared statement support issue #209

--- a/example/mysql_c++/CMakeLists.txt
+++ b/example/mysql_c++/CMakeLists.txt
@@ -127,6 +127,8 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 endif()
 
 add_executable(mysql_cli mysql_cli.cpp)
+add_executable(mysql_tx mysql_tx.cpp)
 
 set(AUX_LIB readline ncurses)
 target_link_libraries(mysql_cli ${BRPC_LIB} ${DYNAMIC_LIB} ${AUX_LIB})
+target_link_libraries(mysql_tx ${BRPC_LIB} ${DYNAMIC_LIB})
