modify auth, modify mysql press test, fix memory leak

--- a/example/mysql_c++/CMakeLists.txt
+++ b/example/mysql_c++/CMakeLists.txt
@@ -100,8 +100,8 @@ if (NOT CRYPTO_LIB)
     message(FATAL_ERROR "Fail to find crypto")
 endif()
 
-# find_path(MYSQL_INCLUDE_PATH NAMES mysql/mysql.h PATHS "/usr/local/opt/mysql-client/include")
-# find_library(MYSQL_LIB NAMES mysqlclient PATHS "/usr/local/opt/mysql-client/lib")
+# find_path(MYSQL_INCLUDE_PATH NAMES mysql/mysql.h)
+# find_library(MYSQL_LIB NAMES mysqlclient)
 # if (NOT MYSQL_LIB)
 #     message(FATAL_ERROR "Fail to find mysqlclient")
 # endif()
