--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,10 +24,9 @@ compile_proto(PROTO_HDRS PROTO_SRCS ${CMAKE_BINARY_DIR}/test
                                     "${TEST_PROTO_FILES}")
 add_library(TEST_PROTO_LIB OBJECT ${PROTO_SRCS} ${PROTO_HDRS})
 
-option(BRPC_DOWNLOAD_GTEST "Download and build a fresh copy of googletest. Requires Internet access." ON)
 set(BRPC_SYSTEM_GTEST_SOURCE_DIR "" CACHE PATH "System googletest source directory.")
 
-if(BRPC_DOWNLOAD_GTEST)
+if(DOWNLOAD_GTEST)
     include(SetupGtest)
 elseif(BRPC_SYSTEM_GTEST_SOURCE_DIR)
     add_subdirectory("${BRPC_SYSTEM_GTEST_SOURCE_DIR}" "${PROJECT_BINARY_DIR}/system-googletest-build")
@@ -172,52 +171,67 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
                     "-Wl,-U,_bthread_key_create")
 endif()
 
-# create executable
+add_library(BUTIL_DEBUG_LIB OBJECT ${BUTIL_SOURCES})
+add_library(SOURCES_DEBUG_LIB OBJECT ${SOURCES})
+
+# shared library needs POSITION_INDEPENDENT_CODE
+set_property(TARGET ${BUTIL_DEBUG_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_property(TARGET ${SOURCES_DEBUG_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+
+add_library(brpc-shared-debug SHARED $<TARGET_OBJECTS:BUTIL_DEBUG_LIB>
+                                     $<TARGET_OBJECTS:SOURCES_DEBUG_LIB>
+                                     $<TARGET_OBJECTS:PROTO_LIB>)
+# change the debug lib output dir to be different from the release output
+set_target_properties(brpc-shared-debug PROPERTIES
+         LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/test)
+
+target_link_libraries(brpc-shared-debug ${DYNAMIC_LIB})
+if(BRPC_WITH_GLOG)
+    target_link_libraries(brpc-shared-debug ${GLOG_LIB})
+endif()
+
+# test_butil
 add_executable(test_butil ${TEST_BUTIL_SOURCES}
                           ${CMAKE_CURRENT_BINARY_DIR}/iobuf.pb.cc)
-target_link_libraries(test_butil brpc-shared
+target_link_libraries(test_butil brpc-shared-debug
                                  gtest
-                                 ${GPERFTOOLS_LIBRARIES}
-                                 ${DYNAMIC_LIB})
+                                 ${GPERFTOOLS_LIBRARIES})
+
 add_test(NAME test_butil COMMAND test_butil)
 
+# test_bvar
 # -DBVAR_NOT_LINK_DEFAULT_VARIABLES not work for gcc >= 5.0, just remove the file to prevent linking into unit tests
 list(REMOVE_ITEM BVAR_SOURCES ${PROJECT_SOURCE_DIR}/src/bvar/default_variables.cpp)
 
-add_library(BVAR_OBJ OBJECT ${BVAR_SOURCES})
+add_library(BVAR_DEBUG_LIB OBJECT ${BVAR_SOURCES})
 file(GLOB TEST_BVAR_SRCS "bvar_*_unittest.cpp")
-add_executable(test_bvar ${TEST_BVAR_SRCS} $<TARGET_OBJECTS:BVAR_OBJ> $<TARGET_OBJECTS:BUTIL_LIB>)
+add_executable(test_bvar ${TEST_BVAR_SRCS}
+                         $<TARGET_OBJECTS:BVAR_DEBUG_LIB>
+                         $<TARGET_OBJECTS:BUTIL_DEBUG_LIB>)
 target_link_libraries(test_bvar gtest
                                 ${GPERFTOOLS_LIBRARIES}
                                 ${DYNAMIC_LIB})
 add_test(NAME test_bvar COMMAND test_bvar)
 
-add_library(BTHREAD_OBJ OBJECT ${BTHREAD_SOURCES})
-add_library(PROTO_OBJ OBJECT ${PROTO_SRCS})
+# bthread tests
 file(GLOB BTHREAD_UNITTESTS "bthread*unittest.cpp")
 foreach(BTHREAD_UT ${BTHREAD_UNITTESTS})
     get_filename_component(BTHREAD_UT_WE ${BTHREAD_UT} NAME_WE)
     add_executable(${BTHREAD_UT_WE} ${BTHREAD_UT}
-                                    $<TARGET_OBJECTS:BUTIL_LIB>
-                                    $<TARGET_OBJECTS:BVAR_OBJ>
-                                    $<TARGET_OBJECTS:BTHREAD_OBJ>
-                                    $<TARGET_OBJECTS:PROTO_LIB>
-                                    $<TARGET_OBJECTS:TEST_PROTO_LIB>
-                                    )
+                                    $<TARGET_OBJECTS:TEST_PROTO_LIB>)
     target_link_libraries(${BTHREAD_UT_WE} gtest_main
-                                           ${GPERFTOOLS_LIBRARIES}
-                                           ${DYNAMIC_LIB})
+                                           brpc-shared-debug
+                                           ${GPERFTOOLS_LIBRARIES})
     add_test(NAME ${BTHREAD_UT_WE} COMMAND ${BTHREAD_UT_WE})
 endforeach()
 
+# brpc tests
 file(GLOB BRPC_UNITTESTS "brpc_*_unittest.cpp")
 foreach(BRPC_UT ${BRPC_UNITTESTS})
     get_filename_component(BRPC_UT_WE ${BRPC_UT} NAME_WE)
     add_executable(${BRPC_UT_WE} ${BRPC_UT} $<TARGET_OBJECTS:TEST_PROTO_LIB>)
-    target_link_libraries(${BRPC_UT_WE} brpc-shared
+    target_link_libraries(${BRPC_UT_WE} brpc-shared-debug
                                         gtest_main
-                                        ${GPERFTOOLS_LIBRARIES}
-                                        ${GTEST_LIB}
-                                        ${DYNAMIC_LIB})
+                                        ${GPERFTOOLS_LIBRARIES})
     add_test(NAME ${BRPC_UT_WE} COMMAND ${BRPC_UT_WE})
 endforeach()
