separate_cmake_debug_and_release_obj: remove UT options in src

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,4 @@
-if(BUILD_UNIT_TESTS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
-elseif(NOT DEBUG)
+if(NOT DEBUG)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
 endif()
