--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,17 +7,17 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
 add_library(BUTIL_LIB OBJECT ${BUTIL_SOURCES})
-add_library(OBJ_LIB OBJECT ${SOURCES})
+add_library(SOURCES_LIB OBJECT ${SOURCES})
 
 # shared library needs POSITION_INDEPENDENT_CODE
-set_property(TARGET ${OBJ_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_property(TARGET ${SOURCES_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
 set_property(TARGET ${BUTIL_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
 
 add_library(brpc-shared SHARED $<TARGET_OBJECTS:BUTIL_LIB> 
-                               $<TARGET_OBJECTS:OBJ_LIB>
+                               $<TARGET_OBJECTS:SOURCES_LIB>
                                $<TARGET_OBJECTS:PROTO_LIB>)
 add_library(brpc-static STATIC $<TARGET_OBJECTS:BUTIL_LIB>
-                               $<TARGET_OBJECTS:OBJ_LIB>
+                               $<TARGET_OBJECTS:SOURCES_LIB>
                                $<TARGET_OBJECTS:PROTO_LIB>)
 
 target_link_libraries(brpc-shared ${DYNAMIC_LIB})
