--- a/test/Makefile
+++ b/test/Makefile
@@ -118,6 +118,7 @@ TEST_BUTIL_SOURCES = \
     flat_map_unittest.cpp \
     crc32c_unittest.cc \
     iobuf_unittest.cpp \
+    object_pool_unittest.cpp \
     recordio_unittest.cpp \
     test_switches.cc \
     scoped_locale.cc \
