--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,8 @@ if(WITH_MESALINK)
     find_library(MESALINK_LIB NAMES mesalink)
     if((NOT MESALINK_INCLUDE_PATH) OR (NOT MESALINK_LIB))
         message(FATAL_ERROR "Fail to find MesaLink")
+    else()
+        message(STATUS "Found MesaLink: ${MESALINK_LIB}")
     endif()
     include_directories(${MESALINK_INCLUDE_PATH})
 endif()
