--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
 
 before_script:
 - ulimit -c unlimited -S       # enable core dumps
+- sudo echo "1" > /proc/sys/kernel/core_uses_pid
 
 before_install:
 - wget --no-clobber https://github.com/bazelbuild/bazel/releases/download/0.25.1/bazel_0.25.1-linux-x86_64.deb && sudo dpkg -i bazel_0.25.1-linux-x86_64.deb
