fix_core_name: update core pattern

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
 
 before_script:
 - ulimit -c unlimited -S       # enable core dumps
-- sudo echo "1" > /proc/sys/kernel/core_uses_pid
+- sudo bash -c "sudo echo 'core.%e.%p' > /proc/sys/kernel/core_pattern"
 
 before_install:
 - wget --no-clobber https://github.com/bazelbuild/bazel/releases/download/0.25.1/bazel_0.25.1-linux-x86_64.deb && sudo dpkg -i bazel_0.25.1-linux-x86_64.deb
