--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,6 +76,7 @@ file(COPY ${PROJECT_SOURCE_DIR}/test/run_tests.sh DESTINATION ${CMAKE_CURRENT_BI
 SET(TEST_BUTIL_SOURCES
     ${PROJECT_SOURCE_DIR}/test/recordio_unittest.cpp
     ${PROJECT_SOURCE_DIR}/test/popen_unittest.cpp
+    ${PROJECT_SOURCE_DIR}/test/bounded_queue_unittest.cc
     ${PROJECT_SOURCE_DIR}/test/at_exit_unittest.cc
     ${PROJECT_SOURCE_DIR}/test/atomicops_unittest.cc
     ${PROJECT_SOURCE_DIR}/test/base64_unittest.cc
