--- a/example/BUILD
+++ b/example/BUILD
@@ -74,3 +74,32 @@ cc_binary(
     ],
     copts = COPTS,
 )
+
+proto_library(
+    name = "mysql_c++_proto",
+    srcs = [
+        "mysql_c++/mysql.proto",
+    ],
+)
+
+cc_proto_library(
+    name = "cc_mysql_c++_proto",
+    deps = [
+        ":mysql_c++_proto",
+    ],
+)
+
+cc_binary(
+    name = "mysql_c++_server",
+    srcs = [
+        "mysql_c++/server.cpp",
+    ],
+    includes = [
+        "mysql_c++",
+    ],
+    deps = [
+        ":cc_mysql_c++_proto",
+        "//:brpc",
+    ],
+    copts = COPTS,
+)
