--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,5 +1,5 @@
 github:
   description: Industrial-grade RPC framework used throughout Baidu, with 1,000,000+ instances and thousands kinds of services. "brpc" means "better RPC".
   labels:
-    - RPC
+    - rpc
   homepage: https://brpc.apache.org
