mongo client temp commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,11 +195,16 @@ endif()
 
 find_package(OpenSSL)
 
+find_package(bson-1.0 REQUIRED)
+
+get_target_property(BSON_INCLUDE_DIRS mongo::bson_shared INTERFACE_INCLUDE_DIRECTORIES)
+
 include_directories(
         ${GFLAGS_INCLUDE_PATH}
         ${PROTOBUF_INCLUDE_DIRS}
         ${LEVELDB_INCLUDE_PATH}
         ${OPENSSL_INCLUDE_DIR}
+        ${BSON_INCLUDE_DIRS}
         )
 
 set(DYNAMIC_LIB
