--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,46 +27,49 @@ add_library(BUTIL_LIB OBJECT ${BUTIL_SOURCES})
 add_library(SOURCES_LIB OBJECT ${SOURCES})
 add_dependencies(SOURCES_LIB PROTO_LIB)
 
-# shared library needs POSITION_INDEPENDENT_CODE
-set_property(TARGET ${SOURCES_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
-set_property(TARGET ${BUTIL_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+if (WITH_SHARED_LIB)
+    # shared library needs POSITION_INDEPENDENT_CODE
+    set_property(TARGET ${SOURCES_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+    set_property(TARGET ${BUTIL_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+    add_library(brpc-shared SHARED $<TARGET_OBJECTS:BUTIL_LIB>
+                                   $<TARGET_OBJECTS:SOURCES_LIB>
+                                   $<TARGET_OBJECTS:PROTO_LIB>)
+    target_link_libraries(brpc-shared ${DYNAMIC_LIB})
+    if(BRPC_WITH_GLOG)
+        target_link_libraries(brpc-shared ${GLOG_LIB})
+    endif()
 
-add_library(brpc-shared SHARED $<TARGET_OBJECTS:BUTIL_LIB> 
-                               $<TARGET_OBJECTS:SOURCES_LIB>
-                               $<TARGET_OBJECTS:PROTO_LIB>)
+    if(BRPC_WITH_THRIFT)
+        target_link_libraries(brpc-shared thrift)
+    endif()
+
+    SET_TARGET_PROPERTIES(brpc-shared PROPERTIES OUTPUT_NAME brpc CLEAN_DIRECT_OUTPUT 1)
+
+    # for protoc-gen-mcpack
+    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/output/bin)
+    set(protoc_gen_mcpack_SOURCES
+        ${PROJECT_SOURCE_DIR}/src/mcpack2pb/generator.cpp
+     )
+    add_executable(protoc-gen-mcpack ${protoc_gen_mcpack_SOURCES})
+    target_link_libraries(protoc-gen-mcpack brpc-shared)
+
+    #install directory
+    install(TARGETS brpc-shared
+            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+            ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+            )
+endif()
+
 add_library(brpc-static STATIC $<TARGET_OBJECTS:BUTIL_LIB>
                                $<TARGET_OBJECTS:SOURCES_LIB>
                                $<TARGET_OBJECTS:PROTO_LIB>)
 
-target_link_libraries(brpc-shared ${DYNAMIC_LIB})
-
-if(BRPC_WITH_GLOG)
-    target_link_libraries(brpc-shared ${GLOG_LIB})
-endif()
-
 if(BRPC_WITH_THRIFT)
-    target_link_libraries(brpc-shared thrift)
     target_link_libraries(brpc-static thrift)
 endif()
 
 SET_TARGET_PROPERTIES(brpc-static PROPERTIES OUTPUT_NAME brpc CLEAN_DIRECT_OUTPUT 1)
-SET_TARGET_PROPERTIES(brpc-shared PROPERTIES OUTPUT_NAME brpc CLEAN_DIRECT_OUTPUT 1)
-
-# for protoc-gen-mcpack
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/output/bin)
-    
-set(protoc_gen_mcpack_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/mcpack2pb/generator.cpp
- )
-add_executable(protoc-gen-mcpack ${protoc_gen_mcpack_SOURCES})
-target_link_libraries(protoc-gen-mcpack brpc-shared)
-    
-#install directory
-install(TARGETS brpc-shared
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        )
 
 install(TARGETS brpc-static
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
