--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -505,8 +505,7 @@ cc_library(
     }),
     hdrs = glob([
         "src/brpc/*.h",
-        "src/brpc/**/*.h",
-        "src/brpc/*.cxx",
+        "src/brpc/**/*.h"
     ]),
     includes = [
         "src/",
