--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -43,3 +43,26 @@ jobs:
       run: |
            cd build
            make -j ${{env.proc_num}}
+           
+  unittest:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: install dependences
+      run: |
+           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
+
+    - name: config_brpc
+      run: |
+           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64"
+
+    - name: compile
+      run: |
+           cd test
+           make -j ${{env.proc_num}}
+    
+    - name: test 
+      run: |
+           cd test
+           sh run_tests.sh
